--- a/app/src/main/res/menu/first_menu.xml
+++ b/app/src/main/res/menu/first_menu.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/menu_settings"
-        android:title="Настройки"
-        app:showAsAction="ifRoom" />
+        android:title="1"
+        app:showAsAction="always" />
     <item
         android:id="@+id/menu_android"
         android:title="Android"
